Trying to get rid of scrolling issue on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,4 +9,5 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   background: linear-gradient(to right, #020717 , #01000c);
+  overscroll-behavior: none;
 }
